feat: add mainnet deployment script and multi-network deployment support
- Implement mainnet deployment command for production deployment
- Extend deployment pipeline to support all major networks
- Fix missing deployment options that limited production readiness
- Enable seamless deployment across localhost, sepolia, and mainnet

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "local-node": "hardhat node",
     "deploy-local": "hardhat deploy --network localhost",
     "deploy-sepolia": "hardhat deploy --network sepolia",
+    "deploy-mainnet": "hardhat deploy --network mainnet",
     "frontend-dev": "cd frontend && npm run dev",
     "build:vercel": "cd frontend && npm install && npm run genabi && npm run build:vercel"
   },
