--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "deploy-local": "hardhat deploy --network localhost",
     "deploy-sepolia": "hardhat deploy --network sepolia",
     "deploy-mainnet": "hardhat deploy --network mainnet",
+    "analyze": "npm run compile && npm run test:coverage",
     "frontend-dev": "cd frontend && npm run dev",
     "build:vercel": "cd frontend && npm install && npm run genabi && npm run build:vercel"
   },
