--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "local-node": "hardhat node",
     "deploy-local": "hardhat deploy --network localhost",
     "deploy-sepolia": "hardhat deploy --network sepolia",
-    "frontend-dev": "cd frontend && npm run dev"
+    "frontend-dev": "cd frontend && npm run dev",
+    "build:vercel": "cd frontend && npm install && npm run genabi && npm run build:vercel"
   },
   "overrides": {
     "ws@>=7.0.0 <7.5.10": ">=7.5.10",
